# SDLPackageManager

./: .gitignore  Cargo.toml  README.md  sdlpkg.json
src/: command.rs  file.rs  installation.rs  main.rs  package.rs  platform.rs  services.rs
