[package]
name = "sdlpkg"
version = "0.1.0"
edition = "2024"
authors = ["Nid77"]
description = "A tool to manage SDL files"
readme = "README.md"
repository = "https://github.com/Nid77/SDLPackageManager"
keywords = ["cli", "SDL"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
zip = "2.6.1" 
fs_extra = "1.3"
clap = { version = "4", features = ["derive"] }
strum_macros = "0.27.1"


